<?xml version="1.0" encoding="utf-8"?>
<resources>
    
    <!-- Colors -->
    <color name="primary_color">#33b5e5</color>
	<color name="secondary_color">#d9e8ee</color>
	<color name="white">#ffffff</color>
	<color name="off_white">#eeeeee</color>
	<color name="gray">#cccccc</color>
	
	
	<color name="primary_color2">#379efb</color>
	<color name="actionbar_color">#4d9cfa</color>

	<!-- Strings -->
    <string name="app_name">Geo Todo</string>
    <string name="title_new_task">New Task</string>
    <string name="title_new_place">New Place</string>
    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    
    <string name="task_title_hint">I need to...</string>
    <string name="task_title_label">Title</string>
	<string name="new_task">New Task</string>
	<string name="delete_task">Delete</string>
	<string name="edit_task">Edit</string>
	
	<string name="place_title_hint">Enter a name for this location</string>
    <string name="place_title_label">Name</string>
	<string name="place_location_label">Location</string>
	<string name="place_location_latitude">Latitude</string>
	<string name="place_location_longitude">Longitude</string>
	
	<string name="place_list_item_lat_label">Lat:</string>
	<string name="place_list_item_long_label">Long:</string>
	
	<string name="no_place_message">You don\'t have any to-do list for this location yet</string>
	<string name="no_place_add_button">Add this location</string>
	
	<string name="new_task_button">+ New list item</string>
	

</resources>
